--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "pandas>=2.3.3",
+    "streamlit>=1.50.0",
 ]
 
 [dependency-groups]
